kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kuberest
  name: kuberest
  labels:
    app: kuberest
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kuberest
